; ModuleID = '/home/carl/AnghaBench/git/extr_archive-tar.c_write_if_needed.c'
source_filename = "/home/carl/AnghaBench/git/extr_archive-tar.c_write_if_needed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@offset = common dso_local global i64 0, align 8
@BLOCKSIZE = common dso_local global i64 0, align 8
@block = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @write_if_needed to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @write_if_needed() #0 {
  %1 = load i64, i64* @offset, align 8
  %2 = load i64, i64* @BLOCKSIZE, align 8
  %3 = icmp eq i64 %1, %2
  br i1 %3, label %4, label %8

4:                                                ; preds = %0
  %5 = load i32, i32* @block, align 4
  %6 = load i64, i64* @BLOCKSIZE, align 8
  %7 = call i32 @write_or_die(i32 1, i32 %5, i64 %6)
  store i64 0, i64* @offset, align 8
  br label %8

8:                                                ; preds = %4, %0
  ret void
}

declare dso_local i32 @write_or_die(i32, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
